syntax = "proto3";

option csharp_namespace = "BorrwoService.Borrowing";

package library;

service CheckBook{
	rpc Check (RequestId) returns (BookResponse);
}

message RequestId{
	int32 Id = 1;
}

message BookResponse{
	bool IsAvailable = 1;
	string BookTitle = 2;
}
